--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/MichaelvanLaar/n8n-nodes-defuddle.git"
+    "url": "git+https://github.com/MichaelvanLaar/n8n-nodes-defuddle.git"
   },
   "main": "index.js",
   "engines": {
